bad/class_different_type_of_overriding_method_06.example_compiler_output
ERROR
[1mbad/class_different_type_of_overriding_method_06.lat:7:5: [1;31merror: [0;1moverriding method type mismatch: overridden method `foo` has 1 argument, but overriding method has 2 arguments[m
    int foo(string x, boolean y) {}
    [1;32m^[m
[1mbad/class_different_type_of_overriding_method_06.lat:3:5: [1;34mnote: [0;1moverridden method's definition is here[m
    int foo(string x) {}
    [1;32m^[m
